# smooth-numbers

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
examples/: 3-smooth.rs  5-smooth.rs  7-smooth.rs  pratt.rs
src/: lib.rs
